Removed resetting of pinch-gesture filter state on pinch end.

We used to reset the TouchActionFilter state |drop_pinch_gesture_events_|
at a pinch end assuming that there is a single pinch-sequence within a
gesture-scroll sequence. This logically correct assumption turned out to
be wrong in practice: a pinch-zoom-out-then-zoom-in actually sends two
consecutive pinch-begin/end sequences between a gesture-scroll-begin/end
sequence.

This CL defers the resetting of |drop_pinch_gesture_events_| to
bracketing gesture-scroll-end to avoid wrong filtering during the second
pinch-begin/end sequence.

BUG=662047

Review-Url: https://codereview.chromium.org/2526433003
Cr-Commit-Position: refs/heads/master@{#434248}

Former-commit-id: b8dc459398704fe6df59e1be0655399085454449